Removed unneeded DirectTranslator updated test framwork